--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CryptoViewApp</string>
+    <string name="last_upd">Last update: %s </string>
+    <string name="symb_temp">%s / %s</string>
 </resources>
