--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CryptoViewApp</string>
     <string name="last_upd">Last update: %s </string>
     <string name="symb_temp">%s / %s</string>
+    <string name="price_format">%.2f</string>
 </resources>
