--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">CryptoViewApp</string>
-    <string name="last_upd">Last update: %s </string>
+    <string name="app_name">Crypto View App</string>
+    <string name="last_upd">Последнее обновление: %s </string>
     <string name="symb_temp">%s / %s</string>
     <string name="price_format">%.2f</string>
     <string name="slash">/</string>
